# dotenvz

./: .dotenvz.toml  .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO.md  cliff.toml
.cargo-husky/hooks/: pre-commit  pre-push
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  ARCHITECTURE_INITIAL.md  ARCHITECTURE_UPDATE.md  CLOUD_PROVIDERS_OVERVIEW.md  CUSTOM_PROVIDER_PROTOCOL.md  DOTENVZ_CONFIG_EXTENSIONS.md  IMPLEMENTATION_GUIDE.md  OS_PROVIDERS_OVERVIEW.md  PROVIDER_SPEC_AWS.md  PROVIDER_SPEC_AZURE.md  PROVIDER_SPEC_GCP.md  PROVIDER_SPEC_LINUX.md  PROVIDER_SPEC_MACOS.md  PROVIDER_SPEC_WINDOWS.md  TEST_PLAN.md
src/: cli.rs  errors.rs  lib.rs  main.rs
src/commands/: exec.rs  get.rs  import.rs  init.rs  list.rs  mod.rs  rm.rs  set.rs
src/config/: loader.rs  mod.rs  model.rs
src/core/: command_resolver.rs  env_resolver.rs  mod.rs  process_runner.rs  project_context.rs
src/providers/: linux_secret_service.rs  macos_keychain.rs  macos_passwords.rs  mock.rs  mod.rs  secret_provider.rs  windows_credential.rs
tests/: integration_test.rs
tests/fixtures/: .dotenvz.toml  .env
