[package]
name = "dotenvz"
version = "0.1.0"
edition = "2021"
description = "Universal CLI for secure env injection via Apple Keychain"
license = "MIT"

[[bin]]
name = "dotenvz"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dotenvy = "0.15"
thiserror = "2"

# macOS Keychain — included now, used once the provider is fully implemented.
# Provides bindings to Security.framework's generic password APIs.
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2"

[dev-dependencies]
toml = "0.8"
