[package]
name = "dotenvz"
version = "0.1.0"
edition = "2021"
description = "Universal CLI for secure env injection via Apple Keychain"
license = "MIT"

[lib]
name = "dotenvz"
path = "src/lib.rs"

[[bin]]
name = "dotenvz"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dotenvy = "0.15"
thiserror = "2"

# Shell-word splitting for alias/exec command strings.
shell-words = "1"

# macOS Keychain — Security.framework generic password APIs.
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2"
core-foundation = "0.9"

[dev-dependencies]
tempfile = "3"
