[package]
name = "dotenvz"
version = "0.1.0"
edition = "2021"
description = "Universal CLI for secure env injection via Apple Keychain"
license = "LicenseRef-Proprietary"

[lib]
name = "dotenvz"
path = "src/lib.rs"

[[bin]]
name = "dotenvz"
path = "src/main.rs"

[[bin]]
name = "dz"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dotenvy = "0.15"
thiserror = "2"

# Shell-word splitting for alias/exec command strings.
shell-words = "1"

# macOS Keychain — Security.framework generic password APIs.
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2"
core-foundation = "0.9"

# Linux Secret Service — D-Bus / GNOME Keyring / KWallet via pure-Rust zbus.
[target.'cfg(target_os = "linux")'.dependencies]
secret-service = { version = "5", features = ["rt-tokio-crypto-rust"] }

# Windows Credential Manager — Win32 Cred* APIs.
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Security_Credentials", "Win32_Foundation"] }

[dev-dependencies]
tempfile = "3"
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }
